# python-project-50

./: README.md  check_json.txt  demo.cast  file_2.json  pyproject.toml
.github/workflows/: my_workflows.yml
gendiff/: __init__.py
gendiff/diff_generator/: __init__.py  comparator.py  get_diff.py  paths_parser.py
gendiff/formaters/: __init__.py  file_1.json  file_1.yml  json.py  plain.py  stylish.py
gendiff/scripts/: comparator.py  gendiff.py
tests/: plain_for_tests.py  test_add_moved.py  test_add_new_file.py  test_add_same_key.py  test_add_twin.py  test_compare_dicts.py  test_diff_generate_yml.py  test_find_paths.py  test_fix_data_frame.py  test_fix_paths.py  test_gen_plain_yml.py  test_gen_stylish_json.py  test_generate_diff.py  test_generate_diff_json.py  test_get_data_frame.py  test_get_files_type.py  test_get_keys.py  test_get_result.py  test_get_values.py  test_jaml_dicts.py  test_json.py  test_json_dicts.py  test_json_format.py  test_make_dicts_json.py  test_make_dicts_yaml.py  test_make_list.py  test_merge_lists.py  test_order_diff.py  test_perform_compare.py  test_plain.py  test_sort_whole_list.py  test_stylish.py  test_stylish_format.py  test_yaml_dicts.py  test_yml_dicts.py
tests/fixtures/: compare_dict1.txt  compare_dict2.txt  compare_dicts_result.txt  data_frame1.txt  data_frame_json_1.txt  data_frame_stylish_1.txt  dict_to_order_1.txt  dicts_from_json.txt  file_2.yaml  fixed_frame.txt  fixed_paths_list.txt  for_list_of_values_1.txt  frame_to_fix_1.txt  ini_dict_for_plain.txt  ini_dict_plain.txt  ini_dict_values1.txt  key_list_for_plain.txt  (+12 more)
